# madlib

./: .gitignore  CMakeLists.txt
doc/: literature.bib  mainpage.dox.in
doc/design/modules/: convex-programming.tex  regression.tex
methods/cart/src/pg_gp/: rf.sql_in
methods/kernel_machines/src/pg_gp/: online_sv.sql_in
src/: CMakeLists.txt
src/config/: Modules.yml
src/modules/convex/: convex.hpp  elastic_net_gaussian_bcd.cpp  elastic_net_gaussian_bcd.hpp  elastic_net_gaussian_igd.cpp  elastic_net_gaussian_igd.hpp  lasso_igd.cpp  lasso_igd.hpp  lmf_igd.cpp  ridge_newton.cpp  ridge_newton.hpp
src/modules/convex/algo/: igd.hpp  regularized_igd.hpp
src/modules/convex/task/: elastic_net.hpp  l1.hpp  l2.hpp  ols.hpp
src/modules/convex/type/: model.hpp  state.hpp
src/modules/crf/: linear_crf.cpp
src/modules/elastic_net/: elastic_net.hpp  elastic_net_binomial_fista.cpp  elastic_net_binomial_igd.cpp  elastic_net_gaussian_cd.cpp  elastic_net_gaussian_cd.hpp  elastic_net_gaussian_fista.cpp  elastic_net_gaussian_fista.hpp  elastic_net_gaussian_igd.cpp  elastic_net_optimizer_fista.hpp  elastic_net_optimizer_igd.hpp  elastic_net_utils.cpp  elastic_net_utils.hpp
src/modules/elastic_net/share/: shared_utils.hpp
src/modules/elastic_net/state/: cd.hpp  fista.hpp  igd.hpp
src/modules/linalg/: metric.cpp
src/modules/regress/: LinearRegression_impl.hpp  LinearRegression_proto.hpp  linear.cpp  logistic.cpp
src/modules/sample/: WeightedSample_impl.hpp  WeightedSample_proto.hpp  weighted_sample.cpp
src/modules/stats/: CMakeLists.txt  t_test.cpp  t_test_mocks.cpp  t_test_mocks.hpp  t_test_test.cpp
src/ports/greenplum/4.0/config/: Modules.yml
src/ports/postgres/: CMakeLists.txt
src/ports/postgres/modules/bayes/: bayes.py_in
src/ports/postgres/modules/convex/: elastic_net.py_in  elastic_net.sql_in  elastic_net_gaussian_bcd.py_in  elastic_net_gaussian_igd.py_in  lasso.sql_in  lasso_igd.py_in  lmf.sql_in  ridge.py_in  ridge.sql_in  utils_regularization.py_in  utils_regularization.sql_in  validate_args.py_in
src/ports/postgres/modules/elastic_net/: elastic_net.py_in  elastic_net.sql_in  elastic_net_gaussian_cd.py_in  elastic_net_gaussian_fista.py_in  (+6 more)
(+28 files in other folders)
